--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  awesome_snackbar_content: ^0.1.6
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
