--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   toastification: ^3.0.3
   provider: ^6.1.5
   shimmer: ^3.0.0
+  redacted: ^1.0.13
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
