--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_generative_ai: ^0.4.7
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.0.0
   dio: ^5.4.0
